# ActiveUltraFeedback

./: .env  .gitignore  .gitmodules  20250710_annotation_variations.ipynb  Dockerfile  LICENSE  README.md  environment.yml  models  pyproject.toml  run.py  run.sh  run_v1.py  run_v1.sh  run_v2.py  run_v2.sh  run_v3.py  run_v3.sh  swiss_ai.py  swiss_ai_add_completions_to_data.py  swiss_ai_utils.py  ultrafeedback_binarized_custom.jsonl
activeuf/: OOM_demonstration.py  aclelo.py  active_learning_loop.py  active_learning_loop.sbatch  active_learning_loop.sh  active_learning_loop2.py  active_learning_loop3.py  active_learning_loop_config.yaml  active_learning_loop_multi_node.sbatch  active_learning_loop_multi_node.sh  active_learning_loop_single_node.sbatch  annotate_completions.py  annotation.py  bulk_annotate.py  configs.py  construct_inputs_for_bulk_annotation.py  convert_to_preference.py  convert_to_ultrafeedback.py  create_input_dataset.py  create_prompts_dataset.py  dpo_training.py  generate_completions.py  get_raw_annotations_v1.py  get_raw_annotations_v2.py  get_raw_annotations_v3.py  get_raw_annotations_v4.py  get_raw_annotations_v4b.py  get_raw_annotations_v5.py  get_raw_annotations_v5b.py  get_raw_annotations_v5b2.py  get_raw_annotations_v6.py  get_raw_annotations_v6b.py  loop_hp_sweep.sh  merge_completions.py  process_annotations.py  prompts.py  prompts_v1.py  prompts_v2.py  prompts_v3.py  prompts_v4.py  (+24 more)
activeuf/acquisition_function/: __init__.py  acquisition.py  acquisition_config.yaml  arguments.py  base.py  configs.yaml  deltaquantile.py  dts.py  ids.py  infogain.py  infomax.py  maxminlcb.py  random.py  rucb.py  ultrafeedback.py
activeuf/active_learning_loop/: arguments.py  run.py  run.yaml  utils.py
activeuf/comparison_data_generation/: fastchat.py  populate_completions_for_debugging_only.py  principles.py
activeuf/completions/: generate_completions.py  merge_completions.py  merge_partial_completions.py  prompts.py
activeuf/cpo/: run_acqs.sh  run_grid.sh  training.py  training.sbatch
activeuf/data_annotation/: annotate_preference.py  fix_overall_score_issue.py  prompts.py
apertus/: convert_responses_to_activeuf_format_pre_merging.py  generate.py  run_annotations_multi_node.sh
archive/: active_learning_loop.py  active_learning_loop_multi_node.sbatch
configs/: cpo_training.yaml  dpo_training.yaml  loop.yaml  loop_sweep.yaml  rm_training.yaml
docs/: alpaca_eval.md  loop_experiments.md  loop_train_eval.md  rm_training.md
scripts/: build_container.sh  dataset_analysis.py  dataset_example_completions.py  eval_judge_rewardbench.py  eval_judge_rewardbench.sbatch  eval_judge_rewardbench_multi_node.sbatch  generate_tables.py  kill_vllm_server.sh  loop_train_eval.sbatch  run_missing_evals.sh  run_missing_trainings.sh  start_ray_cluster.sh  sweep_runner.sbatch  test_docker_multi_gpu.py  test_docker_one_gpu.py  test_hardware_driver.sbatch  update_wandb_run.py  update_wandb_sweep_runs.sh
src/: create_input_dataset.py  principles.py  raw_datasets.py
swiss_ai/: Llama-3.3-70B-Instruct_2.sh  Llama-3.3-70B-Instruct_w_principles_1.sh  Llama-3.3-70B-Instruct_w_principles_2.sh  Qwen2.5-72B-Instruct_2.sh  Qwen3-14B.sh  Qwen3-14B_w_principles.sh  Qwen3-32B_1.sh
tests/: test_acquisition_function.py
(+210 files in other folders)
