[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "activeuf"
version = "0.1.0"
description = "UltraFeedback pipeline with Active Learning"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "transformers",
    "datasets",
    "accelerate",
    "trl",
    "tokenizers",
    "tiktoken",
    "openai",
    "pandas",
    "tqdm",
    "wandb",
    "python-dotenv",
    "peft",
    "mmh3",
    "tensordict",
    "langdetect",
    "nltk",
    "immutabledict",
    "omegaconf",
    "blobfile",

    # Linux-only dependencies (excluded on Windows)
    "vllm; platform_system != 'Windows'",
    "deepspeed; platform_system != 'Windows'",
    "nvitop; platform_system != 'Windows'",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
]

[tool.ruff]
# Add "archive" to the list of default exclusions
extend-exclude = ["archive"]

[tool.hatch.build.targets.wheel]
packages = ["activeuf"]

